[package]
name = "cligpt"
version = "0.2.0"
authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
edition = "2021"
description = "A command-line interface to talk to ChatGPT"
repository = "https://github.com/schneiderfelipe/cligpt"
license = "MIT"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.1"
clap = { version = "4.2.0", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6.2"
futures-util = { version = "0.3.27", default-features = false }
tokio = { version = "1.27.0", features = [
  "rt-multi-thread",
], default-features = false }
