[package]
name = "cligpt"
version = "0.2.0"
authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
edition = "2021"
description = "A command-line interface to talk to ChatGPT"
repository = "https://github.com/schneiderfelipe/cligpt"
license = "MIT"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = { version = "0.10.2", default-features = false }
clap = { version = "4.2.1", features = [
  "derive",
  "env",
  "std",
], default-features = false }
color-eyre = { version = "0.6.2", default-features = false }
directories = { version = "5.0.0", default-features = false }

futures-util = { version = "0.3.28", default-features = false }
serde_json = { version = "1.0.95", default-features = false }
tokio = { version = "1.27.0", features = [
  "rt-multi-thread",
], default-features = false }

[dev-dependencies]
approx = { version = "0.5.1", default-features = false }

[features]
default = [
  "color",
  "error-context",
  "help",
  "suggestions",
  "usage",
  "wrap-help",
  "rustls",
]
color = ["clap/color"]
error-context = ["clap/error-context"]
help = ["clap/help"]
suggestions = ["clap/suggestions"]
usage = ["clap/usage"]
wrap-help = ["clap/wrap_help"]

native-tls = ["async-openai/native-tls"]
rustls = ["async-openai/rustls"]
